# teleif

./: .firebaserc  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.firebase/: hosting.Y2xpZW50XGJ1aWxk.cache
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.jsx  AuthContext.js  ChatContext.js  firebase-config.js  index.scss  test.js
client/src/components/: ChatArea.jsx  Login.jsx  Main.jsx  Sidebar.jsx
client/src/components/layout/: ChatItem.jsx
client/src/data/: groups.js
main/: package-lock.json  package.json  settings.py  urls.py
main/api/: routing.py  urls.py  views.py
main/api/static/: script.js  style.css
main/api/templates/: index.html
main/src/: App.jsx  App.scss  index.scss
main/src/components/layout/: ChatItem.scss  ChatList.jsx  ChatList.scss  ChatPanel.jsx  ChatPanel.scss
main/src/data/: groups.js
public/: index.html
server/: db.js  package-lock.json  package.json  webpack.config.js
server/routes/: index.js
server/src/: index.js
src/: App.jsx  App.scss  index.scss
src/components/layout/: ChatArea.jsx  ChatInputArea.jsx  ChatItem.jsx  ChatItem.scss  ChatList.jsx  ChatList.scss  ChatListHeader.jsx  ChatListHeader.scss  ChatMessage.scss  ChatPanel.jsx  ChatPanel.scss  ChatPanelHeader.jsx
src/data/: groups.js
