[tool.poetry]
name = "TeleIF"
version = "0.1.0"
description = ""
authors = ["Daniel <danfeuser0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
firebase = "^3.0.1"
Pyrebase4 = "^4.5.0"
djangorestframework = "^3.12.4"
channels-redis = "^3.3.1"
channels = "^3.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
